--- a/filedir/vfu/cc/vfu/makefile
+++ b/filedir/vfu/cc/vfu/makefile
@@ -18,7 +18,7 @@ CC_1       = g++
 LD_1       = g++
 AR_1       = ar rv
 RANLIB_1   = ranlib
-CCFLAGS_1  = -I../vslib -I../vslib/pcre -I/usr/include/ncurses -O2 $(CCDEF)
+CCFLAGS_1  = -I../vslib -I../vslib/pcre -I/usr/include/ncurses -O2 $(CCDEF) -fpermissive
 LDFLAGS_1  = -L../vslib -L../vslib/pcre -lvslib -lvscon -lpcre -lncursesw $(LDDEF)
 DEPFLAGS_1 =
 ARFLAGS_1  =
