--- a/qini/_mplayer/input.conf
+++ b/qini/_mplayer/input.conf
@@ -5,8 +5,8 @@ LEFT  seek -4
 
 UP    seek +10
 DOWN  seek -10
-]     seek +10
-[     seek -10
+#]     seek +10
+#[     seek -10
 
 HOME  seek +60
 END   seek -60
@@ -18,5 +18,9 @@ PGDWN seek -300
 )     seek +300
 (     seek -300
 
+#default
+#[ speed -0.1
+#] speed +0.1
+#шщ = []
 0x448 speed -0.1
 0x449 speed +0.1
