--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -105,7 +105,7 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 #         %_  -- use short file names (SFN) for %f and %F (DOS only)
 #         %\  -- use backslashes for %f and %F (DOS only)
 
-ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.JPG.GIF.XPM.PNG.BMP.TIF.tbn., pqiv -f "%f" & #-l
+ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.webp.JPG.GIF.XPM.PNG.BMP.TIF.tbn., pqiv -f "%f" & #-l
 #ux=VIEW pic,INS,.thm.THM., feh "%F"
 #feh -F  "%F" 2>/dev/null &
 ux=VIEW doc,INS,.doc.DOC.docx.xls.xlsx.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
@@ -124,21 +124,30 @@ ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
 ux=PLAY dir,INS,.[].<>., xdotool  getactivewindow set_window --name mplayer ; mplayer -zoom -fs "%f"/*
 
-ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
+ux=playend,F2,.flac.wav.mp3.,playendsmplayer --len=12 --nobeg "%f"
+#ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"
+ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
-#ux=srezopis,F9,.flac.,~/src/bin/biblioteka/srez4opis.py "%f"
-#ux=symmvsrc,F9,.[].<>., ~/src/bin/filedir/sym.py --mv --src --dellink --deldest "%f"/* "%f"/
-ux=renamopis,F9,.[].<>.,renfilesopis "%F"
-ux=renamopis,F9,.flac.wav.cut.size.findm.,renfilesopis .
-ux=okkzapis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`
-ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png,ls *-b.out.* && rm *++.png *.cmp *.cmp?r *-[rc].out[-.]*
-ux=playends,F7,.flac.wav.mp3.,~/src/bin/audio/playendsox "%f"
-ux=rendiropis,F7,.[].,rendiropis.py --move --chasti=- "%f"
+
+## dirs/types before empty .. pattern !! XXX
+ux=markdir,F3,.[].<>.,touch "%f"/valid
+ux=markdir,F3,..wav.,touch "%c"/valid %R
+
+#сочената папка-с-опис + файловете вътре
+ux=renall-selected-dir,F9,.[].<>.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall DIRARGS_move="%f"  %R
+#файловете в текущата папка-с-опис на сочения файл
+ux=renfiles-curdir,F9,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renfiles _DIRARGS_move=.  %R
+#-всички папки-с-опис в текущата директория
+ux=renall-dir-all-in-curdir,F7,.[].,make -C "%c" -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall  %R
+#текущата папка-с-опис на сочения файл + файловете вътре
+ux=renall-curdir,F7,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall _DIRARGS_move="%c --target=%c/.."  %R
+
+ux=okkzapis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`  %R
+ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,ls *-b.out.* && rm -f *++.png *.cmp *.cmp?r *-[rc].out[-.]*  %R
 ux=editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" _size opis ~/src/gramo/abbr "%c"/a &
 ux=editzapis,F12,*,myterm vim -c "argdelete *" "%F" opis ~/src/gramo/abbr &
 # edit
@@ -260,7 +269,7 @@ cCYAN=.[].<>.
 #exe
 cGREEN=.**.
 #media
-cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.aac.flac.ape.wv.mka.3gp.
+cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.webp.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.aac.flac.ape.wv.mka.3gp.
 #link
 chBLUE=.->.
 #cRED=.dotfiles.
