--- a/qini/_mplayer/input.conf
+++ b/qini/_mplayer/input.conf
@@ -1,5 +1,5 @@
-RIGHT seek +1
-LEFT  seek -4
+RIGHT seek +.5
+LEFT  seek -3
 .     pt_step 1
 ,     pt_step -1
 
@@ -24,3 +24,9 @@ PGDWN seek -300
 #шщ = []
 0x448 speed -0.1
 0x449 speed +0.1
+#ШЩ = {}
+0x428 speed -1  
+0x429 speed +1  
+#я=q
+0x44f quit
+
