--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -117,39 +117,54 @@ ux=VIEW TAR,INS,.gz.,gunzip -c "%f" | tar tvf - | less
 
 ux=run python,INS,.py.,python "%F" %w
 
+##XXX  dirs/types before empty .. pattern !! XXX
+#XXX F15 = shift-F3
+#XXX F17 = shift-F5
+
 # play media
-ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.AVI.flv.fli.mov.MOV.mkv.m2ts.ts.wmv.swf.m4v.mp4.MP4.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
+ux=PLAY Media,INS,.mpg.vob.mpeg.asf.avi.flv.fli.mov.mkv.m2ts.ts.wmv.swf.m4v.mp4.lrf.3gp.webm.iso.,mplayer -zoom -fs "%f"  2> /dev/null
 ux=PLAY Media,INS,.mp3.mp36.ac3.m4a.mpc.wav.wv.ogg.wma.flac.aac.ape.mka.,mplayer -novideo -noautosub "%f"  2> /dev/null
 ux=PLAY REAL,INS,.rm.,realplay "%f"  1> /dev/null 2> /dev/null &
 #ux=PLAY Ape,INS,.ape.,mac "%f" - -d | play -t wav -
 ux=PLAY dir,INS,.[].<>., xdotool  getactivewindow set_window --name mplayer ; mplayer -zoom -fs "%f"/*
 
-ux=playend,F2,.flac.wav.mp3.,playendsmplayer --len=12 --nobeg "%f"
-#ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
+ux=playends,F1,.flac.wav.mp3.,playendsmplayer --len=15 "%f"
+ux=playends,F1,.[].<>.,playendsmplayer --len=15 "%f"/*[3vc]
+ux=playend,F2,.flac.wav.mp3.,playendsmplayer --len=15 --nobeg "%f"
+ux=playend,F2,.[].<>.,playendsmplayer --len=15 --nobeg "%f"/*[3vc]
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F5,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
+ux=truncate,F17,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
 ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
 ux=FILE INFO,F8,*,file -L "%f" %w
 
-## dirs/types before empty .. pattern !! XXX
-ux=markdir,F3,.[].<>.,touch "%f"/valid
-ux=markdir,F3,..wav.,touch "%c"/valid %R
+#ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
+#ux=markdir,F3,.[].<>.,touch "%f"/valid
+#ux=markdir,F3,..wav.,touch "%c"/valid %R
+ux=radio-rengrupdir,F3,*,make -f ~/src/bin/biblioteka/radio/rendirall.mak -C "%c"/ grupa %R
+ux=radio-rengrupdir,F15,*,make -f ~/src/bin/biblioteka/radio/rendirall.mak -C "%c"/ grupachast %R
+ux=radio-showpngs,F13,*,pqiv -f ??/*++.png ???/*++.png &
+ux=radio-showcmps,F14,*,for a in */*.2cmp; do echo && ls -dalF `dirname "$a"`/?.flac && cat "$a" ; done | less %w
 
 #сочената папка-с-опис + файловете вътре
-ux=renall-selected-dir,F9,.[].<>.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall DIRARGS_move="%f"  %R
+ux=radio-renall-selected-dir,F9,.[].<>.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall DIRARGS_move="%f"  %R
 #файловете в текущата папка-с-опис на сочения файл
-ux=renfiles-curdir,F9,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renfiles _DIRARGS_move=.  %R
+ux=radio-renfiles-curdir,F9,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renfiles _DIRARGS_move=.  %R
 #-всички папки-с-опис в текущата директория
-ux=renall-dir-all-in-curdir,F7,.[].,make -C "%c" -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall  %R
+ux=radio-renall-dir-all-in-curdir,F7,.[].,make -C "%c" -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall  %R
 #текущата папка-с-опис на сочения файл + файловете вътре
-ux=renall-curdir,F7,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall _DIRARGS_move="%c --target=%c/.."  %R
+ux=radio-renall-curdir,F7,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall _DIRARGS_move="%c --target=%c/.."  %R
 
-ux=okkzapis,F10,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`  %R
-ux=delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,ls *-b.out.* && rm -f *++.png *.cmp *.cmp?r *-[rc].out[-.]*  %R
-ux=editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" _size opis ~/src/gramo/abbr "%c"/a &
-ux=editzapis,F12,*,myterm vim -c "argdelete *" "%F" opis ~/src/gramo/abbr &
+ux=radio-okkzapis,F10,.[].<>.,mkdir -p "%f"/ok/ ; pkill -f "^vim -c .*"`echo "%f" | sed "s/[+ ]/./g"`  %R
+ux=radio-okkzapis,F10,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`  %R
+
+ux=radio-delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,ls *-b.out.* && rm -f *++.png *.cmp *.cmp?r *-[rc].out[-.]*  %R
+
+ux=radio-editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" _size opis ~/src/gramo/abbr & #"%c"/a &
+ux=radio-editzapis-seldir,F12,.[].<>.,myterm vim -c "argdelete *" "%F"/_size "%F"/opis ~/src/gramo/abbr &
+ux=radio-editzapis,F12,*,myterm vim -c "argdelete *" "%F" opis ~/src/gramo/abbr &
+
 # edit
 ux=EDIT pic,F7,.gif.tiff.jpg.png.,gimp "%f" 2> /dev/null 1> /dev/null %n &
 ux=EDIT doc,F7,.doc.DOC.xls.XLS.ppt.PPT.odt.odg.,ooffice "%f" &
@@ -202,7 +217,9 @@ see=*.ogg,filmid.sh "%f"
 see=*.wm[av],filmid.sh "%f"
 see=*.wav,filmid.sh "%f"
 see=*.wv,filmid.sh "%f"
+see=*.mpc,filmid.sh "%f"
 see=*.mp3,eyeD3 --no-color "%f"
+see=*.mp36,eyeD3 --no-color "%f"
 see=*.ac3,filmid.sh "%f"
 see=*.avi,filmid.sh "%f"
 see=*.AVI,filmid.sh "%f"
@@ -216,6 +233,7 @@ see=*.m2ts,filmid.sh "%f"
 see=*.mk[av],filmid.sh "%f"
 see=*.m4[av],filmid.sh "%f"
 see=*.[mM][pP]4,filmid.sh "%f"
+see=*.[lL][rR][fF],filmid.sh "%f"
 see=*.3gp,filmid.sh "%f"
 see=*.webm,filmid.sh "%f"
 see=*.swf,filmid.sh "%f"
@@ -269,7 +287,7 @@ cCYAN=.[].<>.
 #exe
 cGREEN=.**.
 #media
-cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.webp.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.aac.flac.ape.wv.mka.3gp.
+cMAGENTA=.jpg.jpeg.gif.tiff.xpm.png.bmp.pnm.tif.webp.mov.MOV.asf.avi.AVI.mkv.m2ts.mpg.mpeg.fli.flv.wmv.swf.m4v.mp4.lrf.3gp.webm.raw.nef.wav.mp3.m4a.mpc.ogg.aac.flac.ape.wv.mka.3gp.
 #link
 chBLUE=.->.
 #cRED=.dotfiles.
