--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -117,6 +117,7 @@ ux=VIEW TAR,INS,.gz.,gunzip -c "%f" | tar tvf - | less
 
 ux=run python,INS,.py.,python "%F" %w
 
+##XXX  can not use , inside command !!
 ##XXX  dirs/types before empty .. pattern !! XXX
 #XXX F15 = shift-F3
 #XXX F17 = shift-F5
@@ -134,9 +135,11 @@ ux=playend,F2,.flac.wav.mp3.,playendsmplayer --len=15 --nobeg "%f"
 ux=playend,F2,.[].<>.,playendsmplayer --len=15 --nobeg "%f"/*[3vc]
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-ux=truncate,F17,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
+#ux=truncate,F17,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
-ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
+ux=sumtim,F18,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
+ux=tlf,F6,.[].<>.,ln -f `echo "%F" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%F"/ %R
+ux=tlf,F6,.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,ln -f `echo "%c" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%c" %R
 ux=FILE INFO,F8,*,file -L "%f" %w
 
 #ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
