--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -83,7 +83,7 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 #         ()  -- fifo (pipe)
 #         ##  -- socket
 #       You can mix file extensions with file type strings in the same mask.
-#       There is a special mask called `dotfiles' which will match dotfiles (wiles named
+#       There is a special mask called `dotfiles' which will match dotfiles (files named
 #       with leading dot -- `.dotname' )
 # NOTE: You cannot mask longer extensions like `.tar.gz' for example.
 #
@@ -133,38 +133,52 @@ ux=playends,F1,.flac.wav.mp3.,playendsmplayer --len=15 "%f"
 ux=playends,F1,.[].<>.,playendsmplayer --len=15 "%f"/*[3vc]
 ux=playend,F2,.flac.wav.mp3.,playendsmplayer --len=15 --nobeg "%f"
 ux=playend,F2,.[].<>.,playendsmplayer --len=15 --nobeg "%f"/*[3vc]
+
 ux=info,F4,.mp3.,mp3info -r a -x "%F" %w
 ux=info,F4,.flac.FLAC.,metaflac --export-tags-to=- "%F" %w
-#ux=truncate,F17,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
+
 ux=filmdir,F5,.[].<>.,filmdir.sh "%F" %w
-ux=sumtim,F18,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
-ux=tlf,F6,.[].<>.,ln -f `echo "%F" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%F"/ %R
-ux=tlf,F6,.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,ln -f `echo "%c" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%c" %R
+#ux=truncate,F17,.mp3.flac.avi.mkv.,truncate -s 0 "%F"  %R
+#ux=nez,F17,.[].<>.,ln -f `echo "%F" | sed "s:/muzika/.*:/muzika/:"`/,nezapisano "%F"/ %R
+ux=nez,F17,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,ln -f `echo "%c" | sed "s:/muzika/.*:/muzika/:"`/?nezapisano "%c" %R
+
+ux=sumtim,F6,.[].<>.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,sumtim2.py -v "%F" %w
+ux=tlf,F18,.[].<>.,ln -f `echo "%F" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%F"/ %R
+ux=tlf,F18,.mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,ln -f `echo "%c" | sed "s:/muzika/.*:/muzika/:"`/_tlf "%c" %R
+
 ux=FILE INFO,F8,*,file -L "%f" %w
+ux=c5,F20,.[].<>.,ln -f `echo "%F" | sed "s:/muzika/.*:/muzika/:"`/_c5  "%F"/ %R
+ux=c5,F20,..mpc.mp3.ac3.m4a.wav.ogg.aac.flac.ape.wv.,ln -f `echo "%c" | sed "s:/muzika/.*:/muzika/:"`/_c5  "%c" %R
 
 #ux=split,F3,.flac.ape.wav.cue.,bash -ci 'any2flacsplit_forall "%c"'
 #ux=markdir,F3,.[].<>.,touch "%f"/valid
 #ux=markdir,F3,..wav.,touch "%c"/valid %R
 ux=radio-rengrupdir,F3,*,make -f ~/src/bin/biblioteka/radio/rendirall.mak -C "%c"/ grupa %R
 ux=radio-rengrupdir,F15,*,make -f ~/src/bin/biblioteka/radio/rendirall.mak -C "%c"/ grupachast %R
-ux=radio-showpngs,F13,*,pqiv -f ??/*++.png ???/*++.png &
-ux=radio-showcmps,F14,*,for a in */*.2cmp; do echo && ls -dalF `dirname "$a"`/?.flac && cat "$a" ; done | less %w
+ux=radio-showpngs,F13,*,pqiv -f ./??/*++.png ./???/*++.png &
+#x=radio-showcmps,F15,*,for a in */*.2cmp; do echo && ls -dalF `dirname "$a"`/?.flac && cat "$a" ; done | less %w
+ux=radio-showcmps,F16,*,grep -E '(diff|same)' ./??/*.2cmp %w
+
+#ux=radio-ren2are2,F14,*,make -f ~/src/bin/audio/tyrsi/mcmp.mak -C "%c"/ z_are %R
 
 #сочената папка-с-опис + файловете вътре
-ux=radio-renall-selected-dir,F9,.[].<>.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall DIRARGS_move="%f"  %R
-#файловете в текущата папка-с-опис на сочения файл
-ux=radio-renfiles-curdir,F9,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renfiles _DIRARGS_move=.  %R
-#-всички папки-с-опис в текущата директория
-ux=radio-renall-dir-all-in-curdir,F7,.[].,make -C "%c" -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall  %R
-#текущата папка-с-опис на сочения файл + файловете вътре
-ux=radio-renall-curdir,F7,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall _DIRARGS_move="%c --target=%c/.."  %R
+ux=radio-renall-selected-dir,F9,.[].<>.,rendirall "%f" %R
+ ##make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall DIRARGS_move="%f"  %R
+ #файловете в текущата папка-с-опис на сочения файл
+ #ux=radio-renfiles-curdir,F9,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renfiles _DIRARGS_move=.  %R
+#всички папки-с-опис-и-*flac,+файловете-им , в текущата папка
+ux=radio-renall-dir-all-in-curdir,F7,.[].,rendirall flacopisi1 %R
+ ##make -C "%c" -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall  %R
+#текущата папка-с-опис + файловете вътре
+ux=radio-renall-curdir,F7,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,rendirall "%c" %R
+ ##make -f ~/src/bin/biblioteka/radio/rendirall.mak ..renall _DIRARGS_move="%c --target=%c/.."  %R
 
 ux=radio-okkzapis,F10,.[].<>.,mkdir -p "%f"/ok/ ; pkill -f "^vim -c .*"`echo "%f" | sed "s/[+ ]/./g"`  %R
 ux=radio-okkzapis,F10,..flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,mkdir -p ./ok/ ; pkill -f "^vim -c .*"`echo "%c" | sed "s/[+ ]/./g"`  %R
 
 ux=radio-delout-r-c,F11,.flac.wav.cut.size.findm.cmp.cmpar.cmpbr.png.,ls *-b.out.* && rm -f *++.png *.cmp *.cmp?r *-[rc].out[-.]*  %R
 
-ux=radio-editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" _size opis ~/src/gramo/abbr & #"%c"/a &
+ux=radio-editzapis,F12,.wav.flac.,myterm vim -c "argdelete *" "%c"_size opis ~/src/gramo/abbr & #"%c"/a &
 ux=radio-editzapis-seldir,F12,.[].<>.,myterm vim -c "argdelete *" "%F"/_size "%F"/opis ~/src/gramo/abbr &
 ux=radio-editzapis,F12,*,myterm vim -c "argdelete *" "%F" opis ~/src/gramo/abbr &
 
@@ -184,6 +198,11 @@ ux=ompg123: Stop,menu,*,killall -TERM mpg123 1> /dev/null 2> /dev/null &
 ux=smpg123: Suspend,menu,*,killall -STOP mpg123 1> /dev/null 2> /dev/null &
 ux=cmpg123: Continue,menu,*,killall -CONT mpg123 1> /dev/null 2> /dev/null &
 ux=vmpg123: View running/queue,menu,*,ps xeo "%%p %%a" | grep mpg123 | grep -v grep | less
+ux=rrendir-opis+flac-radio,menu,*,rendirall flac %w%R
+ux=fname=datetime,menu,*,jhead -ni%%Y%%m%%d-%%H%%M%%S--%%f *.jpg %R
+ux=radio-ren2are2,menu,*,make -f ~/src/bin/audio/tyrsi/mcmp.mak -C "%c"/ z_are %R
+	
+
 
 
 # execute all files that have type `**' with ENTER
