--- a/qini/vfu.conf
+++ b/qini/vfu.conf
@@ -105,7 +105,7 @@ TrimTree=/dev/:/proc/:/tmp/:/dos/:/a/
 #         %_  -- use short file names (SFN) for %f and %F (DOS only)
 #         %\  -- use backslashes for %f and %F (DOS only)
 
-ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.webp.JPG.GIF.XPM.PNG.BMP.TIF.tbn., pqiv -f "%f" & #-l
+ux=VIEW pic,INS,.jpg.jpeg.gif.xpm.png.bmp.pnm.tif.tiff.webp.JPG.GIF.XPM.PNG.BMP.TIF.tbn.heic., pqiv -f "%f" & #-l
 #ux=VIEW pic,INS,.thm.THM., feh "%F"
 #feh -F  "%F" 2>/dev/null &
 ux=VIEW doc,INS,.doc.DOC.docx.xls.xlsx.XLS.ppt.PPT.pptx.PPTX.rtf.RTF.odt.odg.ods.sxw.sxc.sxd.,ooffice "%f" 1> /dev/null 2> /dev/null &
